@@ -22,7 +22,7 @@
 			</div>		
 		
 		<!-- lead image width is set in module preferences, width takes precedence over height as aspect ratio is maintained -->
-		<{if $news_article.image && $news_article.display_image !== '0'}>
+		<{if $news_article.image && $news_article.display_image != '0'}>
 			<{if $news_article.display_image == '1'}>
 				<div class="news_float_left">
 			<{else}>
@@ -95,7 +95,7 @@
 					</div>
 				
 				<!-- lead image width is set in module preferences, width takes precedence over height as aspect ratio is maintained -->
-				<{if $news_article.image && $news_article.display_image !== '0'}>
+				<{if $news_article.image && $news_article.display_image != '0'}>
 					<{if $news_article.display_image == '1'}>
 						<div class="news_float_left">
 					<{else}>
